--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "5.3.7",
+    "antd": "5.19.0",
+    "axios": "1.7.2",
+    "cors": "2.8.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-router-dom": "6.24.0",
+    "vite-project": "file:"
   },
   "devDependencies": {
     "@types/react": "18.3.3",
